# Deep_learning_finetuning_and_merge

./: .gitignore  baseline_model.py  main.py  makefile  pyproject.toml  readme.md
data/: .gitignore  data.csv  data_split.py  get_data.py  resize_data.py  test.csv
hpc/bash/: sweep_baseline.sh  sweep_lora.sh  sweep_lora_plus.sh  sweep_q_lora.sh  sweep_q_lora_plus.sh  train_baseline.sh  train_lora.sh  train_lora_plus.sh  train_q_lora.sh  train_q_lora_plus.sh
src/config/: config.py  model_config.py
src/data/: dataset.py  get_data.py  resize_data.py
src/model/: baseline_model.py  lora.py  lora_manual.py  lora_model.py
src/utils/: train.py
