[tool.poetry]
name = "deep-learning-finetuning-and-merge"
version = "0.1.0"
description = ""
authors = ["magnusgp <s204075@student.dtu.dk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

kagglehub = "*"
pandas = "*"
pillow = "*"
torch = "2.1.2"
torchvision = "0.16.2"
loguru = "*"
numpy = "1.26.4"
transformers = "*"
peft = "*"
bitsandbytes = "0.42.0"
datasets = "*"
scikit-learn = "*"
tqdm = "*"
torch_tb_profiler = "*"
tensorboard = "^2.4.1"
wandb = "*"
matplotlib = "*"
evaluate = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
