[tool.poetry]
name = "deep-learning-finetuning-and-merge"
version = "0.1.0"
description = ""
authors = ["magnusgp <s204075@student.dtu.dk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

bitsandbytes = "0.42.0"
datasets = "3.1.0"
evaluate = "0.4.3"
kagglehub = "0.3.4"
loguru = "0.7.2"
matplotlib = "3.9.2"
numpy = "1.26.4"
pandas = "2.2.3"
peft = "0.13.2"
pillow = "11.0.0"
scikit-learn = "1.5.2"
tensorboard = "^2.4.1"
torch = "2.5.1"
torch-tb-profiler = "0.4.3"
torchaudio = "2.5.1"
torchvision = "0.20.1"
tqdm = "4.67.0"
transformers = "4.46.3"
wandb = "0.18.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
